game continue fix, level 2 puzzle addition

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -38,8 +38,8 @@ application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name="Logic Object Platformer"
-application/file_description=""
+application/product_name="SpellBlocked"
+application/file_description="Created by Jakub Gut"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
